[package]
name = "liina_baani_bhodi"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.3"
askama-filters = "0.1.3"
big_s = "1.0.2"
trees = "0.3.0"
lazy_static = "1.4.0"