[package]
name = "liina_baani_bhodi"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.3"
askama-filters = "0.1.3"
big_s = "1.0.2"
trees = "0.3.0"
lazy_static = "1.4.0"
env_logger = "0.8.1"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.13.2"
glob = "0.3.0"