[package]
name = "liina_baani_bhodi"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10.5"
askama-filters = "0.1.3"
big_s = "1.0.2"
trees = "0.4.1"
lazy_static = "1.4.0"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
textwrap = "0.13.2"
glob = "0.3.0"